compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__function_named_module_info_in_constant.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn module_info() {\n    1\n}\n\npub const constant = module_info\n\npub fn main() {\n    constant()\n}\n"
---
----- SOURCE CODE

pub fn module_info() {
    1
}

pub const constant = module_info

pub fn main() {
    constant()
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export(['moduleInfo'/0, main/0, constant/0]).

-spec constant() -> fun(() -> integer()).
constant() ->
    fun 'moduleInfo'/0.

-spec 'moduleInfo'() -> integer().
'moduleInfo'() ->
    1.

-spec main() -> integer().
main() ->
    'moduleInfo'().
