compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test-12.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 115
expression: "pub fn second(list) { case list { [x, y] -> y z -> 1 } }\npub fn tail(list) { case list { [x, ..xs] -> xs z -> list } }\n            "

---
-module(the_app).
-compile(no_auto_import).

-export([second/1, tail/1]).

-spec second(list(integer())) -> integer().
second(List) ->
    case List of
        [X, Y] ->
            Y;

        Z ->
            1
    end.

-spec tail(list(P)) -> list(P).
tail(List) ->
    case List of
        [X | Xs] ->
            Xs;

        Z ->
            List
    end.

